Fix overflow on table

--- a/frontend/src/styles/season-game-list.css
+++ b/frontend/src/styles/season-game-list.css
@@ -1,3 +1,6 @@
+.container {
+  overflow: auto;
+}
 .table {
   width: 100%;
   border-collapse: collapse;
